# CAV_2025_artifact

./: Dockerfile  README.md
pdrer_crate/: .gitignore  Cargo.toml  Dockerfile  build.rs
pdrer_crate/examples/: pdr_engine_for_hwmcc.rs
pdrer_crate/src/: lib.rs
pdrer_crate/src/engines/: mod.rs
pdrer_crate/src/engines/pdr/: block_cube.rs  construction.rs  mod.rs  prove.rs  utils.rs
pdrer_crate/src/formulas/: clause.rs  cube.rs  literal.rs  mod.rs  variable.rs
pdrer_crate/src/formulas/cnf/: bounded_variable_elimination.rs  construction.rs  implementations.rs  mod.rs  operations.rs  rename_variable.rs  simplify.rs
pdrer_crate/src/models/: mod.rs
pdrer_crate/src/models/and_inverter_graph/: aig_node.rs  check.rs  construction.rs  conversion.rs  get_and.rs  get_latches.rs  get_wires.rs  mod.rs  random.rs
pdrer_crate/src/models/btor/: construction.rs  gates.rs  line.rs  mod.rs
pdrer_crate/src/models/circuit/: check.rs  construction.rs  cut_enumeration.rs  dot.rs  fixes.rs  get_latches.rs  get_nodes.rs  get_wires.rs  graph.rs  mod.rs  node_types.rs  technology_map_area_flow.rs  technology_map_min_popularity.rs  technology_map_minimizing_depth.rs  technology_map_using_levels.rs  un_constraint.rs
pdrer_crate/src/models/circuit_builder/: build.rs  construction.rs  mod.rs  operations.rs
pdrer_crate/src/models/circuit_simulator/: construction.rs  mod.rs  simulation.rs  ternary_value_vector_1.rs  ternary_value_vector_2.rs
pdrer_crate/src/models/clause_combinations_iterator/: mod.rs
pdrer_crate/src/models/counterexample/: mod.rs  to_aigsim.rs
pdrer_crate/src/models/definition/: api.rs  mod.rs
pdrer_crate/src/models/finite_state_transition_system/: check.rs  cnf.rs  construction.rs  conversion.rs  extraction.rs  features.rs  getting.rs  inductive_subset.rs  mod.rs  random.rs  x_simulation.rs
pdrer_crate/src/models/literal_weights/: construction.rs  get.rs  mod.rs  operations.rs  printing.rs  update.rs
pdrer_crate/src/models/one_pass_reader/: mod.rs
pdrer_crate/src/models/power_set_iterator/: mod.rs
pdrer_crate/src/models/pretty_table/: mod.rs
pdrer_crate/src/models/proof/: mod.rs  to_certifaiger.rs
pdrer_crate/src/models/signal/: mod.rs
pdrer_crate/src/models/signal_tracker/: api.rs  construction.rs  mod.rs
pdrer_crate/src/models/sorted_vec_of_literals/: mod.rs
pdrer_crate/src/models/ternary_value/: mod.rs
pdrer_crate/src/models/time_stats/: api.rs  function_timer.rs  mod.rs
pdrer_crate/src/solvers/: mod.rs
(+1199 files in other folders)
