###################################################################################################
# package
###################################################################################################

[package]
name = "rust-formal-verification"
version = "0.1.11"
edition = "2021"
description = "A rust library that makes it easier to develop, prototype and test new algorithms for formal verification like IC3, PDR, BMC and others."
documentation = "https://docs.rs/rust-formal-verification"
include = ["src/", "LICENSE-*", "README.md"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

###################################################################################################
# dependencies
###################################################################################################

[dependencies]
# SAT solvers
varisat = "0.2.2"
cadical-sys = "0.4.0"
# BDD solvers
oxidd = "0.7.0"
cudd-sys = "1.0.0"
# other crates
rand = "0.8.5"
dot-writer = "0.1.3"
fxhash = "0.2.1"
quick_cache = "0.6.9"

###################################################################################################
# dev-dependencies
###################################################################################################

[dev-dependencies]
clap = { version = "=4.5.15", features = ["derive"] }
walkdir = "2.3.2"
json = "0.12.4"
sysinfo = "0.33.0"
pretty_assertions = "1.4.1"

###################################################################################################
# release
###################################################################################################

[profile.release]
# codegen-units = 1
# lto = "fat"
# panic = "abort"
# debug-assertions = true
debug = true

[profile.test]
debug = true

###################################################################################################
# build
###################################################################################################

# [profile.release]
# rustflags = ["-C", "target-cpu=native"]

###################################################################################################
# bench
###################################################################################################

# benchmarks
# [[bench]]
# name = "ic3_on_easy_examples_benchmark"
# harness = false
